# atmosphere

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/: box.blend
default_envs/the_grid/: env.kdl  grid.blend  grid_floor.glb  grid_sky.hdr
environments/: steamvr.blend  steamvr.glb  test.toml
res/: box.glb
src/: atmosphere.rs  auto_zone_capture.rs  cli.rs  config.rs  env.rs  environment.rs  environment_data.rs  main.rs  play_space.rs  play_space_ref.rs
