[package]
name = "stardust-xr-atmosphere"
version = "0.5.0"
edition = "2024"
description = "Stardust XR's reference environment/homespace client"
authors = ["Nova King <technobaboo@proton.me>"]
license = "MIT"
repository = "https://github.com/StardustXR/atmosphere"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
glam = { version = "0.28.0", features = ["mint", "serde"] }
mint = { version = "0.5.9", features = ["serde"] }
confy = "0.6.1"
serde = { version = "1.0.203", features = ["derive"] }
toml = { version = "0.8.14", features = ["preserve_order"] }
rustc-hash = "2.0.0"
dirs = "5.0.1"
color-eyre = "0.6.3"
clap = { version = "4.5.7", features = ["derive"] }
copy_dir = "0.1.3"
knuffel = "3.2.0"
serde_kdl = "0.1.0"
kdl = "4.6.0"
uuid = { version = "1.16.0", features = ["v4", "rng"] }

[dependencies.stardust-xr-fusion]
version = "0.50.0"
git = "https://github.com/StardustXR/core.git"

[dependencies.stardust-xr-asteroids]
version = "0.50.0"
git = "https://github.com/StardustXR/asteroids.git"
